peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/Contract_Invoiced_Amount__c.object-meta.xml
<CustomObject>
    <description>Object to hold contract invoice amounts. Current Due, Past Due and Total</description>
    <label>Contract Invoiced Amount</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Invoiced Amounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>