peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/fields/CCAN__c.field-meta.xml
<CustomField>
    <fullName>CCAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCAN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Invoiced Amounts</relationshipLabel>
    <relationshipName>Contract_Invoiced_Amounts</relationshipName>
    <type>Lookup</type>
</CustomField>