peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Invoiced Amounts</relationshipLabel>
    <relationshipName>Contract_Invoiced_Amounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>