peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/fields/Current_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount_Due__c</fullName>
    <label>Current Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>