peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>