peac_dev/force-app/main/default/objects/Contract_Invoiced_Amount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Payment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Equipment Protection Program</fullName>
            </value>
            <value>
                <fullName>Asset Usage</fullName>
            </value>
            <value>
                <fullName>Documentation Fees</fullName>
            </value>
            <value>
                <fullName>Late Fee</fullName>
            </value>
            <value>
                <fullName>Supply Freight Fee</fullName>
            </value>
            <value>
                <fullName>Remote Fee</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>